# gpt_migrate_explain

./: .env.example  .gitignore.local  .ruff.toml  pyproject.toml
benchmarks/AutoGPT/source/: AutoGPT
benchmarks/flask-fastapi/source/: app.py
benchmarks/flask-nodejs/source/: app.py
benchmarks/flask-rust/source/: db.py
gpt_migrate/: ai.py  config.py  main.py  parser.py  utils.py
gpt_migrate/memory/: external_dependencies
gpt_migrate/steps/: debug.py  explain.py  migrate.py  setup.py  test.py
