[tool.poetry]
authors = ["nobu007"]
description = "Easily migrate your codebase from one framework or language to another."
name = "gpt_migrate"
version = "0.1.0"

[tool.poetry.dependencies]
langchain = "^0.3.15"
langchain-community = "^0.3.15"
langchain-core = "^0.3.31"
litellm = "^1.34.38"
openai = "^1.60.2"
pydantic = "^2.10.5"
python = "^3.11"
tree-sitter = "^0.21.3"
typer = "^0.15.1"
yaspin = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
dotenv-linter = "~0.5.0"
ruff = "~0.9.2"
