[tool.poetry]
authors = ["nobu007"]
description = "Easily migrate your codebase from one framework or language to another."
name = "gpt_migrate_explain"
version = "0.1.0"

[tool.poetry.dependencies]
langchain = "^0.3.15"
openai = "^0.27.8"
python = "^3.11"
tree-sitter = "^0.21.3"
typer = "^0.15.1"
yaspin = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.group.lint]
optional = true
[tool.poetry.group.lint.dependencies]
dotenv-linter = "~0.5.0"
ruff = "~0.9.2"
